[gd_scene load_steps=11 format=2]

[ext_resource path="res://Controller.gd" type="Script" id=1]
[ext_resource path="res://assets/images/mushroom.png" type="Texture" id=2]
[ext_resource path="res://assets/images/tomato.png" type="Texture" id=3]
[ext_resource path="res://assets/images/oregano.png" type="Texture" id=4]
[ext_resource path="res://assets/images/olives.png" type="Texture" id=5]
[ext_resource path="res://assets/images/peppers.png" type="Texture" id=6]
[ext_resource path="res://assets/images/mozzarella.png" type="Texture" id=7]
[ext_resource path="res://assets/images/broccoli.png" type="Texture" id=8]
[ext_resource path="res://assets/images/corn.png" type="Texture" id=9]
[ext_resource path="res://Button.tscn" type="PackedScene" id=11]

[node name="Controller" type="GridContainer"]
margin_right = 670.0
margin_bottom = 100.0
custom_constants/vseparation = 0
custom_constants/hseparation = 10
columns = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 75.0
margin_bottom = 100.0
icon_texture = ExtResource( 3 )

[node name="Button2" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 85.0
margin_top = 0.0
margin_right = 160.0
margin_bottom = 100.0
key = "S"
icon_texture = ExtResource( 7 )

[node name="Button3" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 170.0
margin_top = 0.0
margin_right = 245.0
margin_bottom = 100.0
key = "D"
icon_texture = ExtResource( 4 )

[node name="Button4" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 255.0
margin_top = 0.0
margin_right = 330.0
margin_bottom = 100.0
key = "F"
icon_texture = ExtResource( 5 )

[node name="Button5" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 340.0
margin_top = 0.0
margin_right = 415.0
margin_bottom = 100.0
key = "Z"
icon_texture = ExtResource( 6 )

[node name="Button6" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 425.0
margin_top = 0.0
margin_right = 500.0
margin_bottom = 100.0
key = "X"
icon_texture = ExtResource( 2 )

[node name="Button7" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 510.0
margin_top = 0.0
margin_right = 585.0
margin_bottom = 100.0
key = "C"
icon_texture = ExtResource( 8 )

[node name="Button8" parent="." instance=ExtResource( 11 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 595.0
margin_top = 0.0
margin_right = 670.0
margin_bottom = 100.0
key = "V"
icon_texture = ExtResource( 9 )
